--- a/pom.xml
+++ b/pom.xml
@@ -39,7 +39,7 @@
 <artifact><id>net.sf.opencsv:opencsv:1.8</id></artifact>
 <artifact><id>org.mvel:mvel2:2.0.17</id></artifact>
 <artifact><id>org.codehaus.groovy:groovy-all:1.5.7</id></artifact>
-
+<artifact><id>com.healthmarketscience.jackcess:jackcess:1.2.13</id></artifact>
 <artifact><id>org.freemarker:freemarker:2.3.15</id></artifact>
 <artifact><id>antlr:antlr:2.7.7</id></artifact>
 <!--artifact><id>org.antlr:antlr:3.5</id></artifact-->
