--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,8 @@
 <artifact><id>org.jdom:jdom:jar:1.1</id></artifact>
 <artifact><id>org.odftoolkit:odfdom-java:jar:0.8.6</id></artifact>
 <artifact><id>org.rxtx:rxtx:jar:2.1.7</id></artifact>
+<artifact><id>org.slf4j:jcl-over-slf4j:1.6.6</id></artifact> 
+<artifact><id>org.slf4j:log4j-over-slf4j:1.6.6</id></artifact> 
 <artifact><id>org.slf4j:jul-to-slf4j:jar:1.6.6</id></artifact>
 <artifact><id>org.slf4j:slf4j-api:jar:1.6.6</id></artifact>
 <artifact><id>org.slf4j:slf4j-ext:jar:1.6.6</id></artifact>
