--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,25 @@
     <version>1.0.0</version>
     <build>
         <plugins>
+          <plugin>
+              <groupId>org.codehaus.mojo</groupId>
+              <artifactId>exec-maven-plugin</artifactId>
+              <version>1.2.1</version>
+              <executions>
+                <execution>
+                  <phase>package</phase>
+                  <goals>
+                    <goal>exec</goal>
+                  </goals>
+                </execution>
+              </executions>
+              <configuration>
+                <executable>ruby</executable>
+                <arguments>
+                  <argument>get_ag_ion.rb</argument>
+                </arguments>
+              </configuration>
+            </plugin>
             <plugin>
                 <groupId>org.reficio</groupId>
                 <artifactId>p2-maven-plugin</artifactId>
@@ -22,64 +41,73 @@
                             <artifacts>
                                 <!-- specify your depencies here -->
                                 <!-- groupId:artifactId:version -->
-<artifact><id>uk.org.lidalia:sysout-over-slf4j:1.0.2</id></artifact>
 <!-- For postgresql we should be able to add bnd['Eclipse-RegisterBuddy'] = 'ch.rgw.utility'" -->
-<artifact><id>org.postgresql:postgresql:jar:9.2-1002-jdbc4</id></artifact>
-<artifact><id>xstream:xstream:1.2.2</id></artifact>
-<artifact><id>org.milyn:milyn-smooks-all:1.4</id></artifact>
-<artifact><id>javax.persistence:persistence-api::1.0</id></artifact>
-<artifact><id>antlr:stringtemplate:2.2</id></artifact>
-<!--artifact><id>org.antlr:stringtemplate:4.0.2</id></artifact-->
-<artifact><id>log4j:log4j:1.2.16</id></artifact>
-<artifact><id>wutka:dtdparser:1.21</id></artifact>
-<artifact><id>javax.transaction:jta:1.1</id></artifact>
-<artifact><id>xerces:xercesImpl:2.6.2</id></artifact>
-<artifact><id>commons-collections:commons-collections:3.1</id></artifact>
-<artifact><id>jline:jline:0.9.94</id></artifact>
-<artifact><id>net.sf.opencsv:opencsv:1.8</id></artifact>
-<artifact><id>org.mvel:mvel2:2.0.17</id></artifact>
-<artifact><id>org.codehaus.groovy:groovy-all:1.5.7</id></artifact>
-<artifact><id>com.healthmarketscience.jackcess:jackcess:1.2.13</id></artifact>
-<artifact><id>org.freemarker:freemarker:2.3.15</id></artifact>
+<artifact><id>ag.ion:bion.workbench.office.editor.activation.nl1:2.0.14</id></artifact>
+<artifact><id>ag.ion:bion.workbench.office.editor.activation:2.0.14</id></artifact>
+<artifact><id>ag.ion:bion.workbench.office.editor.activation:2.0.9</id></artifact>
+<artifact><id>ag.ion:bion.workbench.office.editor.core:2.0.14</id></artifact>
+<artifact><id>ag.ion:bion.workbench.office.editor.ui.nl1:2.0.14</id></artifact>
+<artifact><id>ag.ion:bion.workbench.office.editor.ui:2.0.14</id></artifact>
+<artifact><id>ag.ion:noa4e.search.nl1:2.0.14</id></artifact>
+<artifact><id>ag.ion:noa4e.search:2.0.14</id></artifact>
+<artifact><id>ag.ion:noa4e.ui.nl1:2.0.14</id></artifact>
+<artifact><id>ag.ion:noa4e.ui:2.0.14</id></artifact>
+<artifact><id>ag.ion:noa:2.2.3</id></artifact>
 <artifact><id>antlr:antlr:2.7.7</id></artifact>
-<!--artifact><id>org.antlr:antlr:3.5</id></artifact-->
-<artifact><id>xpp3:xpp3_min:1.1.3.4.O</id></artifact>
-<artifact><id>org.yaml:snakeyaml:1.6</id></artifact>
-<artifact><id>jaxen:jaxen:1.1.1</id></artifact>
-<artifact><id>org.codehaus.jackson:jackson-core-lgpl:1.0.1</id></artifact>
-<artifact><id>ognl:ognl:2.7.3</id></artifact>
-<artifact><id>bsf:bsf:jar:2.4.0</id></artifact>
-<artifact><id>ch.qos.logback:logback-classic:jar:1.0.7</id></artifact>
-<artifact><id>ch.qos.logback:logback-core:jar:1.0.7</id></artifact>
-<artifact><id>com.h2database:h2:jar:1.3.170</id></artifact>
+<artifact><id>antlr:stringtemplate:2.2</id></artifact>
+<artifact><id>bsf:bsf:2.4.0</id></artifact>
+<artifact><id>ch.qos.logback:logback-classic:1.0.7</id></artifact>
+<artifact><id>ch.qos.logback:logback-core:1.0.7</id></artifact>
+<artifact><id>com.h2database:h2:1.3.170</id></artifact>
+<artifact><id>com.healthmarketscience.jackcess:jackcess:1.2.13</id></artifact>
+<artifact><id>commons-collections:commons-collections:3.1</id></artifact>
 <artifact><id>commons-io:commons-io:2.1</id></artifact>
-<artifact><id>commons-io:commons-io:jar:2.4</id></artifact>
+<artifact><id>commons-io:commons-io:2.4</id></artifact>
 <artifact><id>commons-lang:commons-lang:2.4</id></artifact>
 <artifact><id>commons-lang:commons-lang:2.5</id></artifact>
 <artifact><id>commons-lang:commons-lang:2.6</id></artifact>
-<artifact><id>commons-lang:commons-lang:jar:2.4</id></artifact>
-<artifact><id>commons-logging:commons-logging:jar:1.1.1</id></artifact>
-<artifact><id>javax.ws.rs:jsr311-api:jar:1.1.1</id></artifact>
-<artifact><id>javax.xml:jaxp-api:jar:1.4.2</id></artifact>
-<artifact><id>mysql:mysql-connector-java:jar:5.1.21</id></artifact>
+<artifact><id>commons-lang:commons-lang:2.4</id></artifact>
+<artifact><id>commons-logging:commons-logging:1.1.1</id></artifact>
+<artifact><id>javax.persistence:persistence-api::1.0</id></artifact>
+<artifact><id>javax.transaction:jta:1.1</id></artifact>
+<artifact><id>javax.ws.rs:jsr311-api:1.1.1</id></artifact>
+<artifact><id>javax.xml:jaxp-api:1.4.2</id></artifact>
+<artifact><id>jaxen:jaxen:1.1.1</id></artifact>
+<artifact><id>jline:jline:0.9.94</id></artifact>
+<artifact><id>log4j:log4j:1.2.16</id></artifact>
+<artifact><id>mysql:mysql-connector-java:5.1.21</id></artifact>
+<artifact><id>net.sf.opencsv:opencsv:1.8</id></artifact>
+<artifact><id>ognl:ognl:2.7.3</id></artifact>
 <artifact><id>org.apache.commons:commons-lang3:3.1</id></artifact>
-<artifact><id>org.apache.poi:poi:jar:3.0.2-FINAL</id></artifact>
-<artifact><id>org.beanshell:bsh:jar:2.0b4</id></artifact>
-<artifact><id>org.bouncycastle:bcprov-jdk16:jar:1.46</id></artifact>
-<artifact><id>org.jdom:jdom:jar:1.1</id></artifact>
-<artifact><id>org.odftoolkit:odfdom-java:jar:0.8.6</id></artifact>
-<artifact><id>org.rxtx:rxtx:jar:2.1.7</id></artifact>
+<artifact><id>org.apache.poi:poi:3.0.2-FINAL</id></artifact>
+<artifact><id>org.beanshell:bsh:2.0b4</id></artifact>
+<artifact><id>org.bouncycastle:bcprov-jdk16:1.46</id></artifact>
+<artifact><id>org.codehaus.groovy:groovy-all:1.5.7</id></artifact>
+<artifact><id>org.codehaus.jackson:jackson-core-lgpl:1.0.1</id></artifact>
+<artifact><id>org.freemarker:freemarker:2.3.15</id></artifact>
+<artifact><id>org.jdom:jdom:1.1</id></artifact>
+<artifact><id>org.milyn:milyn-smooks-all:1.4</id></artifact>
+<artifact><id>org.mvel:mvel2:2.0.17</id></artifact>
+<artifact><id>org.odftoolkit:odfdom-java:0.8.6</id></artifact>
+<artifact><id>org.postgresql:postgresql:9.2-1002-jdbc4</id></artifact>
+<artifact><id>org.rxtx:rxtx:2.1.7</id></artifact>
 <artifact><id>org.slf4j:jcl-over-slf4j:1.6.6</id></artifact> 
+<artifact><id>org.slf4j:jul-to-slf4j:1.6.6</id></artifact>
 <artifact><id>org.slf4j:log4j-over-slf4j:1.6.6</id></artifact> 
-<artifact><id>org.slf4j:jul-to-slf4j:jar:1.6.6</id></artifact>
-<artifact><id>org.slf4j:slf4j-api:jar:1.6.6</id></artifact>
-<artifact><id>org.slf4j:slf4j-ext:jar:1.6.6</id></artifact>
-<artifact><id>org.slf4j:slf4j-jcl:jar:1.6.6</id></artifact>
-<artifact><id>org.slf4j:slf4j-log4j12:jar:1.6.6</id></artifact>
-<artifact><id>org.yaml:snakeyaml:jar:1.11</id></artifact>
-<artifact><id>xalan:serializer:jar:2.7.1</id></artifact>
-<artifact><id>xerces:xercesImpl:jar:2.9.0</id></artifact>
-<artifact><id>xml-resolver:xml-resolver:jar:1.2</id></artifact>
+<artifact><id>org.slf4j:slf4j-api:1.6.6</id></artifact>
+<artifact><id>org.slf4j:slf4j-ext:1.6.6</id></artifact>
+<artifact><id>org.slf4j:slf4j-jcl:1.6.6</id></artifact>
+<artifact><id>org.slf4j:slf4j-log4j12:1.6.6</id></artifact>
+<artifact><id>org.yaml:snakeyaml:1.6</id></artifact>
+<artifact><id>org.yaml:snakeyaml:1.11</id></artifact>
+<artifact><id>uk.org.lidalia:sysout-over-slf4j:1.0.2</id></artifact>
+<artifact><id>wutka:dtdparser:1.21</id></artifact>
+<artifact><id>xalan:serializer:2.7.1</id></artifact>
+<artifact><id>xerces:xercesImpl:2.6.2</id></artifact>
+<artifact><id>xerces:xercesImpl:2.9.0</id></artifact>
+<artifact><id>xml-resolver:xml-resolver:1.2</id></artifact>
+<artifact><id>xpp3:xpp3_min:1.1.3.4.O</id></artifact>
+<artifact><id>xstream:xstream:1.2.2</id></artifact>
                             </artifacts>
                         </configuration>
                     </execution>
