--- a/pom.xml
+++ b/pom.xml
@@ -111,6 +111,11 @@
                             <artifacts>
                                 <!-- specify your depencies here -->
                                 <!-- groupId:artifactId:version -->
+<artifact><source>true</source><id>org.javassist:javassist:3.13.0-GA</id></artifact>
+<artifact><source>true</source><id>cglib:cglib-nodep:2.2.2</id></artifact>
+<artifact><source>true</source><id>org.powermock:powermock-module-junit4:1.4.12</id></artifact>
+<artifact><source>true</source><id>org.powermock:powermock-api-mockito:1.4.12</id></artifact>
+<artifact><source>true</source><id>org.mockito:mockito-all:1.8.5</id></artifact>
 <!-- For postgresql we should be able to add bnd['Eclipse-RegisterBuddy'] = 'ch.rgw.utility'" -->
 <artifact><source>true</source><id>de.kupzog:ktable:2.1.3</id></artifact>
 <artifact><source>true</source><id>de.kupzog:ktable:2.2.0</id></artifact>
