--- a/pom.xml
+++ b/pom.xml
@@ -115,6 +115,8 @@
 <artifact><source>true</source><id>jfree:jcommon:1.0.16</id></artifact>
 <artifact><source>true</source><id>jfree:jfreechart:1.0.13</id></artifact>
                                 
+<artifact><source>true</source><id>net.sf.barcode4j:barcode4j-fop-ext-complete:2.0</id></artifact>
+                                
 <artifact><source>true</source><id>org.apache.xmlgraphics:fop:0.94</id></artifact>
 <!-- updating to fop 1.1 is a bad idea as we would have to work around this problem:
   http://apache-fop.1065347.n5.nabble.com/Maven-dependencies-for-fop-1-1-td37437.html
