--- a/pom.xml
+++ b/pom.xml
@@ -115,6 +115,7 @@
 
 <artifact><source>true</source><id>ca.uhn.hapi:hapi-base:2.2</id></artifact>
 <artifact><source>true</source><id>ca.uhn.hapi:hapi-structures-v26:2.2</id></artifact>
+<artifact><source>true</source><id>com.sun.jna:jna:3.0.9</id></artifact>
 
 <artifact><source>true</source><id>jfree:jcommon:1.0.16</id></artifact>
 <artifact><source>true</source><id>jfree:jfreechart:1.0.13</id></artifact>
