--- a/pom.xml
+++ b/pom.xml
@@ -113,10 +113,18 @@
                                 <!-- groupId:artifactId:version -->
 
 
+<artifact><source>true</source><id>ca.uhn.hapi:hapi-base:1.2</id></artifact>
+<artifact><source>true</source><id>ca.uhn.hapi:hapi-structures-v21:1.2</id></artifact>
+<artifact><source>true</source><id>ca.uhn.hapi:hapi-structures-v22:1.2</id></artifact>
+<artifact><source>true</source><id>ca.uhn.hapi:hapi-structures-v23:1.2</id></artifact>
+<artifact><source>true</source><id>ca.uhn.hapi:hapi-structures-v231:1.2</id></artifact>
+<artifact><source>true</source><id>ca.uhn.hapi:hapi-structures-v24:1.2</id></artifact>
+<artifact><source>true</source><id>ca.uhn.hapi:hapi-structures-v25:1.2</id></artifact>
+<artifact><source>true</source><id>ca.uhn.hapi:hapi-structures-v251:1.2</id></artifact>
+<artifact><source>true</source><id>ca.uhn.hapi:hapi-structures-v26:1.2</id></artifact>
 <artifact><source>true</source><id>ca.uhn.hapi:hapi-base:2.2</id></artifact>
 <artifact><source>true</source><id>ca.uhn.hapi:hapi-structures-v26:2.2</id></artifact>
 <artifact><source>true</source><id>com.sun.jna:jna:3.0.9</id></artifact>
-
 <artifact><source>true</source><id>jfree:jcommon:1.0.16</id></artifact>
 <artifact><source>true</source><id>jfree:jfreechart:1.0.13</id></artifact>
 <artifact><source>true</source><id>jfree:jfreechart-swt:1.0.9</id></artifact>
