--- a/pom.xml
+++ b/pom.xml
@@ -113,6 +113,7 @@
                                 <!-- groupId:artifactId:version -->
 
 
+<artifact><source>true</source><id>ca.uhn.hapi:hapi-osgi-base:1.2</id></artifact>
 <artifact><source>true</source><id>ca.uhn.hapi:hapi-base:1.2</id></artifact>
 <artifact><source>true</source><id>ca.uhn.hapi:hapi-structures-v21:1.2</id></artifact>
 <artifact><source>true</source><id>ca.uhn.hapi:hapi-structures-v22:1.2</id></artifact>
