--- a/pom.xml
+++ b/pom.xml
@@ -194,6 +194,7 @@
 <artifact><source>true</source><id>ognl:ognl:2.7.3</id></artifact>
 <artifact><source>true</source><id>org.apache.commons:commons-jexl:2.1.1</id></artifact>
 <artifact><source>true</source><id>org.apache.commons:commons-lang3:3.1</id></artifact>
+<artifact><source>true</source><id>org.apache.commons:commons-exec:1.1</id></artifact>
 <artifact><source>true</source><id>org.apache.poi:poi:3.0.2-FINAL</id></artifact>
 <artifact><source>true</source><id>org.beanshell:bsh:2.0b4</id></artifact>
 <artifact><source>true</source><id>org.bouncycastle:bcprov-jdk16:1.46</id></artifact>
