--- a/pom.xml
+++ b/pom.xml
@@ -227,6 +227,7 @@
 <artifact><source>true</source><id>xml-resolver:xml-resolver:1.2</id></artifact>
 <artifact><source>true</source><id>xpp3:xpp3_min:1.1.3.4.O</id></artifact>
 <artifact><source>true</source><id>xstream:xstream:1.2.2</id></artifact>
+<artifact><source>true</source><id>org.quartz-scheduler:quartz:2.2.1</id></artifact>
                             </artifacts>
                         </configuration>
                     </execution>
