--- a/pom.xml
+++ b/pom.xml
@@ -228,6 +228,7 @@
 <artifact><source>true</source><id>xpp3:xpp3_min:1.1.3.4.O</id></artifact>
 <artifact><source>true</source><id>xstream:xstream:1.2.2</id></artifact>
 <artifact><source>true</source><id>org.quartz-scheduler:quartz:2.2.1</id></artifact>
+<artifact><source>true</source><id>com.google.guava:guava:15.0</id></artifact>
                             </artifacts>
                         </configuration>
                     </execution>
