[2851] Add viollier dependencies

--- a/pom.xml
+++ b/pom.xml
@@ -229,6 +229,8 @@
 <artifact><source>true</source><id>xstream:xstream:1.2.2</id></artifact>
 <artifact><source>true</source><id>org.quartz-scheduler:quartz:2.2.1</id></artifact>
 <artifact><source>true</source><id>com.google.guava:guava:15.0</id></artifact>
+<artifact><source>true</source><id>org.apache.httpcomponents:httpclient:4.1.3</id></artifact>
+<artifact><source>true</source><id>org.apache.httpcomponents:httpcore:4.1.4</id></artifact>
                             </artifacts>
                         </configuration>
                     </execution>
