--- a/pom.xml
+++ b/pom.xml
@@ -232,6 +232,7 @@
 <artifact><source>true</source><id>org.apache.httpcomponents:httpclient:4.1.3</id></artifact>
 <artifact><source>true</source><id>org.apache.httpcomponents:httpcore:4.1.4</id></artifact>
 <artifact><source>true</source><id>backport-util-concurrent:backport-util-concurrent:3.1</id></artifact>
+<artifact><source>true</source><id>com.ibm.icu:icu4j:3.4.4</id></artifact>
                             </artifacts>
                         </configuration>
                     </execution>
