--- a/pom.xml
+++ b/pom.xml
@@ -102,6 +102,13 @@
                 <groupId>org.reficio</groupId>
                 <artifactId>p2-maven-plugin</artifactId>
                 <version>1.0.0</version>
+                <exclusions>
+                	<exclusion>
+                		<groupId>com.ibm.icu</groupId>
+                		<artifactId>icu4j</artifactId>
+                		<version>2.6.1</version>
+                	</exclusion>
+                </exclusions>
                 <executions>
                     <execution>
                         <id>default-cli</id>
