--- a/pom.xml
+++ b/pom.xml
@@ -102,6 +102,19 @@
                 <groupId>org.reficio</groupId>
                 <artifactId>p2-maven-plugin</artifactId>
                 <version>1.0.0</version>
+                <dependencies>
+                	<dependency>
+                		<groupId>jaxen</groupId>
+                		<artifactId>jaxen</artifactId>
+                		<version>1.1.1</version>
+	                	<exclusions>
+	                		<exclusion>
+	                			<groupId>com.ibm.icu</groupId>
+	                			<artifactId>icu4j</artifactId>
+	                		</exclusion>
+	                	</exclusions>
+                	</dependency>
+                </dependencies>
                 <executions>
                     <execution>
                         <id>default-cli</id>
@@ -185,6 +198,7 @@
 <artifact><source>true</source><id>commons-lang:commons-lang:2.6</id></artifact>
 <artifact><source>true</source><id>commons-lang:commons-lang:2.4</id></artifact>
 <artifact><source>true</source><id>commons-logging:commons-logging:1.1.1</id></artifact>
+<artifact><source>true</source><id>com.ibm.icu:icu4j:3.4.4</id></artifact>
 <artifact><source>true</source><id>javax.persistence:persistence-api::1.0</id></artifact>
 <artifact><source>true</source><id>javax.transaction:jta:1.1</id></artifact>
 <artifact><source>true</source><id>javax.ws.rs:jsr311-api:1.1.1</id></artifact>
