--- a/pom.xml
+++ b/pom.xml
@@ -245,6 +245,7 @@
 <artifact><source>true</source><id>com.google.guava:guava:15.0</id></artifact>
 <artifact><source>true</source><id>org.apache.httpcomponents:httpclient:4.1.3</id></artifact>
 <artifact><source>true</source><id>org.apache.httpcomponents:httpcore:4.1.4</id></artifact>
+<artifact><source>true</source><id>net.spy:spymemcached:2.11.6</id></artifact>
                             </artifacts>
                         </configuration>
                     </execution>
