--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
 	<properties>
 		<scm_url>git@github.com:elexis/elexis.3rdparty.libraries.git</scm_url>
 		<sourceforge_mirror>http://heanet.dl.sourceforge.net</sourceforge_mirror>
+		<instructions_comment>Added OSGi SymbolicName/Version for P2 site elexis.3rdparty.libraries</instructions_comment>
 	</properties>
 	<build>
 		<plugins>
@@ -104,22 +105,6 @@
 							<packaging>jar</packaging>
 							<generatePom>true</generatePom>
 							<artifactId>google-oauth-client</artifactId>
-							<version>1.20.0</version>
-						</configuration>
-					</execution>
-
-					<execution>
-						<id>google-api-client-2.0</id>
-						<phase>process-resources</phase>
-						<goals>
-							<goal>install-file</goal>
-						</goals>
-						<configuration>
-							<file>${project.build.directory}/calendar/libs/google-api-client-1.20.0.jar</file>
-							<groupId>elexis_3rdparty</groupId>
-							<artifactId>com-google.api-client</artifactId>
-							<packaging>jar</packaging>
-							<generatePom>true</generatePom>
 							<version>1.20.0</version>
 						</configuration>
 					</execution>
@@ -278,6 +263,25 @@
 				</executions>
 			</plugin>
 			<plugin>
+					<groupId>org.codehaus.mojo</groupId>
+					<artifactId>exec-maven-plugin</artifactId>
+					<version>1.2.1</version>
+					<executions>
+						<execution>
+							<phase>package</phase>
+							<goals>
+								<goal>exec</goal>
+							</goals>
+						</execution>
+					</executions>
+					<configuration>
+						<executable>ruby</executable>
+						<arguments>
+							<argument>get_ag_ion.rb</argument>
+						</arguments>
+					</configuration>
+				</plugin>
+			<plugin>
 				<groupId>org.reficio</groupId>
 				<artifactId>p2-maven-plugin</artifactId>
 				<version>1.0.0</version>
@@ -304,6 +308,26 @@
 							<artifacts>
 								<!-- specify your depencies here -->
 								<!-- groupId:artifactId:version -->
+<artifact><source>true</source><id>org.powermock:powermock-reflect:1.4.12</id></artifact>
+<artifact><source>true</source><id>antlr:antlr:2.7.7</id></artifact>
+<artifact><source>true</source><id>de.kupzog:ktable:2.1.3</id></artifact>
+<artifact><source>true</source><id>de.kupzog:ktable:2.2.0</id></artifact>
+<artifact><source>true</source><id>com.lowagie:itext:2.0.8</id></artifact>
+<artifact><source>true</source><id>commons-dbcp:commons-dbcp:1.4</id></artifact>
+<artifact><source>true</source><id>commons-pool:commons-pool:1.6</id></artifact>
+<artifact><source>true</source><id>ag.ion:noa:2.2.3</id></artifact>
+<artifact><source>true</source><id>ag.ion:bion.workbench.office.editor.activation.nl1:2.0.14</id></artifact>
+<artifact><source>true</source><id>ag.ion:bion.workbench.office.editor.activation:2.0.14</id></artifact>
+<artifact><source>true</source><id>ag.ion:bion.workbench.office.editor.activation:2.0.9</id></artifact>
+<artifact><source>true</source><id>ag.ion:bion.workbench.office.editor.core:2.0.14</id></artifact>
+<artifact><source>true</source><id>ag.ion:bion.workbench.office.editor.ui.nl1:2.0.14</id></artifact>
+<artifact><source>true</source><id>ag.ion:bion.workbench.office.editor.ui:2.0.14</id></artifact>
+<artifact><source>true</source><id>ag.ion:noa4e.search.nl1:2.0.14</id></artifact>
+<artifact><source>true</source><id>ag.ion:noa4e.search:2.0.14</id></artifact>
+<artifact><source>true</source><id>ag.ion:noa4e.ui.nl1:2.0.14</id></artifact>
+<artifact><source>true</source><id>ag.ion:noa4e.ui:2.0.14</id></artifact>
+<!--          ag.ion.noa4e.ui_2.0.14elexis.jar -->
+
 <artifact><source>true</source><id>ca.uhn.hapi:hapi-osgi-base:1.2</id></artifact>
 <artifact><source>true</source><id>ca.uhn.hapi:hapi-base:1.2</id></artifact>
 <artifact><source>true</source><id>ca.uhn.hapi:hapi-structures-v21:1.2</id></artifact>
@@ -346,25 +370,6 @@
 <artifact><source>true</source><id>org.powermock:powermock-api-mockito:1.4.12</id></artifact>
 <artifact><source>true</source><id>org.powermock:powermock-module-junit4-common:1.4.12</id></artifact>
 <artifact><source>true</source><id>org.powermock:powermock-module-junit4:1.4.12</id></artifact>
-<artifact><source>true</source><id>org.powermock:powermock-reflect:1.4.12</id></artifact>
-<artifact><source>true</source><id>de.kupzog:ktable:2.1.3</id></artifact>
-<artifact><source>true</source><id>de.kupzog:ktable:2.2.0</id></artifact>
-<artifact><source>true</source><id>com.lowagie:itext:2.0.8</id></artifact>
-<artifact><source>true</source><id>commons-dbcp:commons-dbcp:1.4</id></artifact>
-<artifact><source>true</source><id>commons-pool:commons-pool:1.6</id></artifact>
-<artifact><source>true</source><id>ag.ion:bion.workbench.office.editor.activation.nl1:2.0.14</id></artifact>
-<artifact><source>true</source><id>ag.ion:bion.workbench.office.editor.activation:2.0.14</id></artifact>
-<artifact><source>true</source><id>ag.ion:bion.workbench.office.editor.activation:2.0.9</id></artifact>
-<artifact><source>true</source><id>ag.ion:bion.workbench.office.editor.core:2.0.14</id></artifact>
-<artifact><source>true</source><id>ag.ion:bion.workbench.office.editor.ui.nl1:2.0.14</id></artifact>
-<artifact><source>true</source><id>ag.ion:bion.workbench.office.editor.ui:2.0.14</id></artifact>
-<artifact><source>true</source><id>ag.ion:noa4e.search.nl1:2.0.14</id></artifact>
-<artifact><source>true</source><id>ag.ion:noa4e.search:2.0.14</id></artifact>
-<artifact><source>true</source><id>ag.ion:noa4e.ui.nl1:2.0.14</id></artifact>
-<artifact><source>true</source><id>ag.ion:noa4e.ui:2.0.14</id></artifact>
-<!--          ag.ion.noa4e.ui_2.0.14elexis.jar -->
-<artifact><source>true</source><id>ag.ion:noa:2.2.3</id></artifact>
-<artifact><source>true</source><id>antlr:antlr:2.7.7</id></artifact>
 <artifact><source>true</source><id>antlr:stringtemplate:2.2</id></artifact>
 <artifact><source>true</source><id>bsf:bsf:2.4.0</id></artifact>
 <artifact><source>true</source><id>ch.qos.logback:logback-classic:1.0.7</id></artifact>
@@ -434,8 +439,7 @@
 									<instructions>
 										<Bundle-SymbolicName>com.google.api.client</Bundle-SymbolicName>
 										<Bundle-Version>1.20.0</Bundle-Version>
-										<Comment>Built for Elexis 3.1 master branch via
-											elexis.3rdparty.libraries project</Comment>
+										<Comment>${instructions_comment}</Comment>
 									</instructions>
 								</artifact>
 								<artifact>
@@ -444,8 +448,7 @@
 									<instructions>
 										<Bundle-SymbolicName>com.google.api.client.java6</Bundle-SymbolicName>
 										<Bundle-Version>1.20.0</Bundle-Version>
-										<Comment>Built for Elexis 3.1 master branch via
-											elexis.3rdparty.libraries project</Comment>
+										<Comment>${instructions_comment}</Comment>
 									</instructions>
 								</artifact>
 								<artifact>
@@ -454,8 +457,7 @@
 									<instructions>
 										<Bundle-SymbolicName>com.google.api.services.calendar</Bundle-SymbolicName>
 										<Bundle-Version>1.20.0</Bundle-Version>
-										<Comment>Built for Elexis 3.1 master branch via
-											elexis.3rdparty.libraries project</Comment>
+										<Comment>${instructions_comment}</Comment>
 									</instructions>
 								</artifact>
 								<artifact>
@@ -464,7 +466,7 @@
 									<instructions>
 										<Bundle-SymbolicName>com.google.oauth.client</Bundle-SymbolicName>
 										<Bundle-Version>1.20.0</Bundle-Version>
-										<Comment>Built for Elexis 3.1 master branch via
+										<Comment>${instructions_comment}
 											elexis.3rdparty.libraries project</Comment>
 									</instructions>
 								</artifact>
@@ -474,8 +476,7 @@
 									<instructions>
 										<Bundle-SymbolicName>com.google.oauth.client.java6</Bundle-SymbolicName>
 										<Bundle-Version>1.20.0</Bundle-Version>
-										<Comment>Built for Elexis 3.1 master branch via
-											elexis.3rdparty.libraries project</Comment>
+										<Comment>${instructions_comment}</Comment>
 									</instructions>
 								</artifact>
 								<artifact>
@@ -484,8 +485,7 @@
 									<instructions>
 										<Bundle-SymbolicName>com.google.oauth.client.jetty</Bundle-SymbolicName>
 										<Bundle-Version>1.20.0</Bundle-Version>
-										<Comment>Built for Elexis 3.1 master branch via
-											elexis.3rdparty.libraries project</Comment>
+										<Comment>${instructions_comment}</Comment>
 									</instructions>
 								</artifact>
 								<artifact>
@@ -494,8 +494,7 @@
 									<instructions>
 										<Bundle-SymbolicName>com.google.http.client.gson</Bundle-SymbolicName>
 										<Bundle-Version>1.20.0</Bundle-Version>
-										<Comment>Built for Elexis 3.1 master branch via
-											elexis.3rdparty.libraries project</Comment>
+										<Comment>${instructions_comment}</Comment>
 									</instructions>
 								</artifact>
 								<artifact>
@@ -504,8 +503,7 @@
 									<instructions>
 										<Bundle-SymbolicName>com.google.http.client.jackson2</Bundle-SymbolicName>
 										<Bundle-Version>1.20.0</Bundle-Version>
-										<Comment>Built for Elexis 3.1 master branch via
-											elexis.3rdparty.libraries project</Comment>
+										<Comment>${instructions_comment}</Comment>
 									</instructions>
 								</artifact>
 								<artifact>
@@ -514,8 +512,7 @@
 									<instructions>
 										<Bundle-SymbolicName>com.google.http.client.jdo</Bundle-SymbolicName>
 										<Bundle-Version>1.20.0</Bundle-Version>
-										<Comment>Built for Elexis 3.1 master branch via
-											elexis.3rdparty.libraries project</Comment>
+										<Comment>${instructions_comment}</Comment>
 									</instructions>
 								</artifact>
 								<artifact>
@@ -524,11 +521,9 @@
 									<instructions>
 										<Bundle-SymbolicName>com.google.http.client</Bundle-SymbolicName>
 										<Bundle-Version>1.20.0</Bundle-Version>
-										<Comment>Built for Elexis 3.1 master branch via
-											elexis.3rdparty.libraries project</Comment>
+										<Comment>${instructions_comment}</Comment>
 									</instructions>
 								</artifact>
-
 							</artifacts>
 						</configuration>
 					</execution>
@@ -562,17 +557,16 @@
 	</build>
 
 	<pluginRepositories>
-		<pluginRepository>
-			<id>reficio</id>
-			<url>http://repo.reficio.org/maven/</url>
-		</pluginRepository>
+			<pluginRepository>
+					<id>reficio</id>
+					<url>http://repo.reficio.org/maven/</url>
+			</pluginRepository>
 	</pluginRepositories>
 
 	<repositories>
 		<repository>
 			<id>mvnrepository</id>
 			<url>http://repo.maven.apache.org/maven2</url>
-			<!--url>http://mvnrepository.com/repository</url -->
 		</repository>
 		<repository>
 			<id>mandubian-mvn</id>
