--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,9 @@
 	<artifactId>elexis.3rdparty.libraries.p2.site</artifactId>
 	<packaging>pom</packaging>
 	<version>1.0.0-SNAPSHOT</version>
+	<prerequisites>
+		<maven>3.0.5</maven>
+	</prerequisites>
 	<properties>
 		<scm_url>git@github.com:elexis/elexis.3rdparty.libraries.git</scm_url>
 		<sourceforge_mirror>http://heanet.dl.sourceforge.net</sourceforge_mirror>
@@ -14,6 +17,14 @@
 	</properties>
 	<build>
 		<plugins>
+			<plugin>
+				<artifactId>maven-clean-plugin</artifactId>
+				<version>2.6.1</version>
+			</plugin>
+			<plugin>
+				<artifactId>maven-deploy-plugin</artifactId>
+				<version>2.8.2</version>
+			</plugin>
 			<plugin>
 				<groupId>com.googlecode.maven-download-plugin</groupId>
 				<artifactId>maven-download-plugin</artifactId>
@@ -56,7 +67,7 @@
 			</plugin>
 			<plugin>
 				<artifactId>maven-antrun-plugin</artifactId>
-				<version>1.7</version>
+				<version>1.8</version>
 				<executions>
 					<execution>
 						<phase>generate-resources</phase>
@@ -75,7 +86,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-install-plugin</artifactId>
-				<version>2.5.1</version>
+				<version>2.5.2</version>
 				<executions>
 					<execution>
 						<id>google-api-client</id>
@@ -265,7 +276,7 @@
 			<plugin>
 					<groupId>org.codehaus.mojo</groupId>
 					<artifactId>exec-maven-plugin</artifactId>
-					<version>1.2.1</version>
+					<version>1.4.0</version>
 					<executions>
 						<execution>
 							<phase>package</phase>
@@ -284,7 +295,7 @@
 			<plugin>
 				<groupId>org.reficio</groupId>
 				<artifactId>p2-maven-plugin</artifactId>
-				<version>1.0.0</version>
+				<version>1.1.1</version>
 				<dependencies>
 					<dependency>
 						<groupId>jaxen</groupId>
@@ -533,7 +544,7 @@
 			<plugin>
 				<groupId>org.mortbay.jetty</groupId>
 				<artifactId>jetty-maven-plugin</artifactId>
-				<version>8.1.5.v20120716</version>
+				<version>8.1.16.v20140903</version>
 				<configuration>
 					<scanIntervalSeconds>10</scanIntervalSeconds>
 					<webAppSourceDirectory>${basedir}/target/repository/</webAppSourceDirectory>
@@ -547,7 +558,7 @@
 					deploying ! We will instead generate P2-update sites ! -->
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-site-plugin</artifactId>
-				<version>3.3</version>
+				<version>3.4</version>
 				<configuration>
 					<skip>true</skip>
 					<skipDeploy>true</skipDeploy>
