--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,26 @@
 	</properties>
 	<build>
 		<plugins>
+      <plugin>
+        <groupId>pl.project13.maven</groupId>
+        <artifactId>git-commit-id-plugin</artifactId>
+        <version>2.0.4</version> <!-- cannot use 2.2.0 as we have maven < 3.1.1 -->
+        <executions>
+          <execution>
+            <goals>
+              <goal>revision</goal>
+            </goals>
+          </execution>
+        </executions>
+        <configuration>
+          <dotGitDirectory>${project.basedir}/.git</dotGitDirectory>
+          <prefix>git</prefix>
+          <dateFormat>yyyyMMdd-HHmmss</dateFormat>
+          <generateGitPropertiesFile>true</generateGitPropertiesFile>
+          <generateGitPropertiesFilename>repo.properties</generateGitPropertiesFilename>
+          <skipPoms>false</skipPoms>
+        </configuration>
+      </plugin>
 			<plugin>
 				<artifactId>maven-clean-plugin</artifactId>
 				<version>2.6.1</version>
